# Motor

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
Code/: CMakeLists.txt
Code/Editor/: CMakeLists.txt
Code/Editor/Editor/: CMakeLists.txt
Code/Editor/Main/: CMakeLists.txt  main.cpp
Code/Runtime/: CMakeLists.txt
Code/Runtime/Core/: Application.h  CMakeLists.txt  CoreDLL.hpp
Code/Runtime/Core/Window/: Window.h
Code/Runtime/Core/Window/Win32/: Win32NativeWindow.cpp  Win32NativeWindow.h
Code/Runtime/Renderer/: CMakeLists.txt  Renderer.h  RendererDLL.hpp  RendererPCH.hpp
Code/Runtime/Renderer/Devices/: Instance.hpp
